--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://tobias-fyi.github.io/fyi-pages/about/" />
 <meta property="og:site_name" content="fastpages" />
 <script type="application/ld+json">
-{"headline":"About Me","description":"An easy to use blogging platform with support for Jupyter Notebooks.","@type":"WebSite","url":"https://tobias-fyi.github.io/fyi-pages/about/","name":"fastpages","@context":"https://schema.org"}</script>
+{"description":"An easy to use blogging platform with support for Jupyter Notebooks.","@type":"WebSite","headline":"About Me","url":"https://tobias-fyi.github.io/fyi-pages/about/","name":"fastpages","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/fyi-pages/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://tobias-fyi.github.io/fyi-pages/feed.xml" title="fastpages" /><link rel="shortcut icon" type="image/x-icon" href="/fyi-pages/images/favicon.ico"><link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
